style : logo alignemnt fix

--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -51,6 +51,7 @@
     }
     .header {
         border: none;
+        padding-left: 5px;
     }
     .user img {
         width: 35px;
